--- a/public/src/templates/register2.html
+++ b/public/src/templates/register2.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         {% include 'banner.html' %}
-        <div id="root">
+        <div id="root" class="register-page">
         </div>
     </body>
 </html>
