--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -32,7 +32,7 @@
 
 <p>
     <b>Labbmedlem</b><br/>
-    För labbmedlemmar så är lokalen öppen dygnet runt, året runt, men för att komma in första gången så måste du kvittera ut en nyckel. Nyckelutlämningar äger rum ungefär varannan vecka, och datum hittar du i vårt kalendarium (<a href="https://makerspace.se/kalendarium">makerspace.se/kalendarium</a>). För att kvittera ut en nyckel måste du skriva under ett avtal där du ålägger dig att följa våra lokalregler (<a href="https://wiki.makerspace.se/Lokalregler">wiki.makerspace.se/Lokalregler</a>), samt visa ID.
+    För labbmedlemmar så är lokalen öppen dygnet runt, året runt, men för att komma in första gången så måste du besöka en medlemsintroduktion. Medlemsintroduktioner äger rum ungefär varannan vecka, och datum hittar du i vårt kalendarium (<a href="https://makerspace.se/kalendarium">makerspace.se/kalendarium</a>). För få access måste du skriva under ett avtal där du ålägger dig att följa våra lokalregler (<a href="https://wiki.makerspace.se/Lokalregler">wiki.makerspace.se/Lokalregler</a>), samt visa ID.
 </p>
 
 <h3>Jag vill gå kurs! När är det kurs?</h3>
@@ -43,10 +43,10 @@
 <p>Absolut! Emaila styrelsen på <a href="mailto:info@makerspace.se">info@makerspace.se</a> så pratar vi upplägg, anmälan och sätter in kursen i kalendariet. Om du är osäker på om det finns en efterfrågan inom just ditt kunskapsområde kan du kolla av intresse genom att posta om saken i Facebookgruppen eller på Slack.</p>
 
 <h3>Mitt labbmedlemskap håller på att ta slut, måste jag komma förbi igen och aktivera taggen?</h3>
-<p>Nej. Har du redan tagg så behöver du inte besöka en nyckelutlämning. Vi hanterar uppdateringen av din tagg utan att du behöver närvara.</p>
+<p>Nej. Har du redan tagg så behöver du inte besöka en medlemsintroduktion. Vi hanterar uppdateringen av din tagg utan att du behöver närvara.</p>
 
 <h3>När ska jag betala in labbmedlemskap för att inte låsas ute?</h3>
-<p>Titta efter Nyckelutlämningar i kalendariet. Om du betalar för labb innan dess så kommer labbmånder som du köpt att läggas till din nuvarande labbtid. Vårt nyckelutlämningssystem är under utveckling av sjyssta medlemmar, men f.n. kan vi inte tillhandahålla eller uppdatera nycklar med högre frekvens än varannan vecka.</p>
+<p>Nycklar förlängs/återaktiveras en gång i veckan på natten mellan torsdag och fredag.</p>
 
 <h3>Vad är mitt medlemsnummer, är min tagg aktiv och hur lång tid till är taggen aktiv?</h3>
 <p>Kolla <a href="https://medlem.makerspace.se/">din alldeles egna medlems-sida</a>.</p>
@@ -61,7 +61,7 @@
 <p>Yes! Köp din egen förvaringsbox med måtten 50x39x26 cm (32L). Märk den med en etikett från <a href="https://wiki.makerspace.se/Memberbooth">Memberbooth</a> och ställ den på en en fri plats på hyllplanen i korridoren. Lådan finns ex vis på <a href="https://www.clasohlson.com/se/F%C3%B6rvaringsl%C3%A5da-SmartStore-Home/34-1552-31">Clas Ohlson</a>. </p>
 
 <h3>Jag bygger något större än labblådan, var ska jag förvara det?</h3>
-<p>I mån av plats så kan du lägga ditt projekt i hall-hyllorna i max 3 månader. Ditt projekt ska vara märkt med en etikett från <a href="https://wiki.makerspace.se/Memberbooth">Memberbooth</a>, annars försvinner det. Vi har plats för köpta skivor av plywood, akryl och liknande bredvid laserskäraren i stora rummet. Alla regler kring förvaring på Stockholm Makerspace går att hitta på <a href="https://wiki.makerspace.se/Medlemsf%C3%B6rvaring">wikin.</a></p>
+<p>I mån av plats så kan du lägga ditt projekt i de avsedda hyllorna i lagerrummet, under max 3 månader. Ditt projekt ska vara märkt med en etikett från <a href="https://wiki.makerspace.se/Memberbooth">Memberbooth</a>, annars kommer det att slängas. Vi har plats för köpta skivor av plywood, akryl och liknande bredvid laserskäraren i stora rummet. Alla regler kring förvaring på Stockholm Makerspace går att hitta på <a href="https://wiki.makerspace.se/Medlemsf%C3%B6rvaring">wikin.</a></p>
 
 <h3>Jag lämnade mitt projekt på ett bord över natten och sen var det borta!</h3>
 <p>Du måste städa efter dig. Vi har en städare som vi betalar en ansenlig summa för att våttorka golv och bord varje vecka. Men han rör inte bord med saker på, och städar inte golv där det står saker. Det är jätteviktigt att du städar undan efter dig, så att vi kan ha en gemensam, ren lokal. Har du råkat lämna saker på ett bord så kan det ha slängts eller flyttats till en Lost&Found-låda. Medlemmar hjälps åt att tömma soporna. Fråga en medlem om du inte vet hur man gör, eller kolla in <a href="https://wiki.makerspace.se/St%C3%A4drutiner">städrutinerna</a>.</p>
@@ -70,14 +70,13 @@
 <p>Stockholm Makerspace erbjuder ett pentry med en kaffekokare, mikrovågsugn och en liten kyl som du kan förvara din matlåda i. Du kan t ex köpa färdigmat på The Coffice över gatan, eller på 7-Eleven eller T-Snabben nere vid Östra Station.</p>
 
 <h3>Hur funkar styrelsen?</h3>
-<p>Styrelsen arbetar ideellt och möts ungefär 1 gång i månaden. Då går man igenom ekonomi, kommande nyckelutlämnings-datum, eventuella problem och tar beslut kring större inköp. Om du vill kontakta styrelsen så emaila <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</p>
+<p>Styrelsen arbetar ideellt och möts ungefär 1 gång i månaden. Då går man igenom ekonomi, kommande medlemsintroduktions-datum, eventuella problem och tar beslut kring större inköp. Om du vill kontakta styrelsen så emaila <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</p>
 
 
 <h3>Ok. Var får jag reda på mer?</h3>
 <ul>
     <li>Vår <a href="https://wiki.makerspace.se/Slack">Slack</a> är väldigt aktiv med rum för olika ämnesområden. Där ställer man frågor, hittar hjälp och får info om kurser. </li>
-    <li>Vår <a href="http://fb.com/groups/makerspace.se/">Facebook-grupp för medlemmar</a></li>
-    <li>I <a href="https://www.makerspace.se/kalendarium">Kalendariet</a> ser du events och nyckelutlämningar.</li>
+    <li>I <a href="https://www.makerspace.se/kalendarium">Kalendariet</a> ser du events och medlemsintroduktioner.</li>
     <li>Vi skickar ut ett "Nyhetsbrev" till alla medlemmars email (utkommer sporadiskt).</li>
     <li><a href="https://www.makerspace.se/">Hemsidan</a> innehåller länkar och info om föreningen.</li>
     <li><a href="https://wiki.makerspace.se">Wikin</a> innehåller mycket, till ex <a href="https://wiki.makerspace.se/Makerspace_FAQ">Makerspace FAQ</a> (allmäna frågor & svar), och <a href="https://wiki.makerspace.se/Maskiner_och_inventarier">Maskiner och inventarier</a> (lista över inventarier) samt hjälp och info per maskin (exempelvis vilka parametrar du behöver per material i laserskäraren).</li>
@@ -118,7 +117,7 @@
     As a member in the organisation you’re welcome to attend our events and workshops, as well as vote at the annual meeting. If you wish to do independent projects on your own on the premises, you need to become a lab member.</p>
 
 <p><b>Lab membership</b><br/>
-    The premises are open 24/7 for lab members, all year long, but to start gaining access you need to get a key fob. Key handouts occur approximately every two weeks, and they’re called "nyckelutlämning" in our calendar (<a href="https://makerspace.se/kalendarium">makerspace.se/kalendarium</a>). To check out a key you need to sign an agreement where you agree to adhere to our rules (<a href="https://wiki.makerspace.se/Rules_for_Makerspace">wiki.makerspace.se/Rules_for_Makerspace</a>), and you also need to show an ID.</p>
+    The premises are open 24/7 for lab members, all year long, but to start gaining access you need to attend a new member introduction. New member introductions occur approximately every two weeks, and they’re called "medlemsintroduktion" in our calendar (<a href="https://makerspace.se/kalendarium">makerspace.se/kalendarium</a>). To get access you need to sign an agreement where you agree to adhere to our rules (<a href="https://wiki.makerspace.se/Rules_for_Makerspace">wiki.makerspace.se/Rules_for_Makerspace</a>), and you also need to show an ID.</p>
 
 <h3>I want to go to a workshop! When is the next workshop?</h3>
 <p>All activities are run by volunteers, like you and me. We help each other learn the machines so that everyone can work independently. Share what you can, and ask for help if you get stuck. Some machines require that you have gone to a course for in order to be able to use, for example:  welding (svetsrummet), laser cutter, embroidery-machine and resin printer. Courses are advertised in the Facebook group and on Slack and can be found on the calendar. There is no queue - first come, first served.</p>
@@ -127,10 +126,10 @@
 <p>Absolutely! Email the board at <a href="mailto:info@makerspace.se">info@makerspace.se</a> to talk about the set up, creating a sign-up, and posting the course in the calendar. If you're unsure there is interest for your specific area of knowledge you can ask in the Facebook-group or on Slack.</p>
 
 <h3>My lab membership is running out, do I have to come in person again to activate the tag?</h3>
-<p>No. If you already have a tag, you do not need to come to a "nyckelutlämning" again. Your tag will be updated from our side.</p>
+<p>No. If you already have a tag, you do not need to come to a "medlemsintroduktion" again. Your tag will be updated from our side.</p>
 
 <h3>When should I pay for more lab membership so I don't get locked out?</h3>
-<p>Look for the next "nyckelutlämning" in the calendar. If you pay for lab membership before then, the lab months you purchase will be added to your current lab time. Our key delivery system is under development by our members, but for now we cannot provide or update keys with a higher frequency than every other week.</p>
+<p>Lab access times are extended or activated every week, during nights between Thursdays and Fridays.</p>
 
 <h3>What is my member number, is my tag active, and how long is my tag active?</h3>
 <p>Check out <a href="https://medlem.makerspace.se/">your member page</a>.</p>
@@ -145,7 +144,7 @@
 <p>Yes! Purchase your own storage box of size 50x39x26 cm (32L). Label it with a label from <a href="https://wiki.makerspace.se/Memberbooth">Memberbooth</a> and find a place for it on the shelves in the corridor. Boxes can be purchased at places like <a href="https://www.clasohlson.com/se/F%C3%B6rvaringsl%C3%A5da-SmartStore-Home/34-1552-31">Clas Ohlson</a>.</p>
 
 <h3>I'm building something a bit bigger than a storage box, can I still store it here?</h3>
-<p>If there is space available, you can place your project on the hall shelves for a maximum of 3 months. Your project should be marked with a label for temporary storage from <a href="https://wiki.makerspace.se/Memberbooth">Memberbooth</a>, otherwise it will disappear. We have room for purchased sheets of plywood, acrylic and the like next to the laser cutter in the large room.</p>
+<p>If there is space available, you can place your project on the shelves in the storage room, for a maximum of 3 months. Your project should be marked with a label for temporary storage from <a href="https://wiki.makerspace.se/Memberbooth">Memberbooth</a>, otherwise it will be thrown away. We have room for purchased sheets of plywood, acrylic and the like next to the laser cutter in the large room.</p>
 
 <h3>I left my project on a table over night and now it's gone!</h3>
 <p>You have to clean up after yourself. We have a cleaning service that we pay a considerable amount to mop floors and tables every week. But the cleaner does not touch tables with things on them, and does not clean floors where things are. It is very important that you clean up after yourself, so that we all can have a common, clean room. If you happened to leave things on a table, it might have been thrown away or moved to a Lost & Found box. Members help to empty the garbage. Ask a member if you don't know how to do it, or check out the <a href="https://wiki.makerspace.se/St%C3%A4drutiner">cleaning routines ("städrutinerna")</a>.</p>
@@ -154,14 +153,13 @@
 <p>Stockholm Makerspace is offering a kitchenette with a microwave oven and a small fridge, where you can store and heat food. You can buy food, for example, across the street at The Coffice, or 7-Eleven or T-Snabben near the station.</p>
 
 <h3>How does the Board work?</h3>
-<p>All Board members are volunteers and we meet about once per month. At the board meetings we discuss the financials, upcoming key tag nights ("nyckelutlämning"), any problems, and decide on larger purchases. If you want to contact the Board, email <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</p>
+<p>All Board members are volunteers and we meet about once per month. At the board meetings we discuss the financials, upcoming new member introductions ("medlemsintroduktion"), any problems, and decide on larger purchases. If you want to contact the Board, email <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</p>
 
 
 <h3>Ok. Where can I find out more?</h3>
 <ul>
     <li>Our <a href="https://wiki.makerspace.se/Slack">Slack</a> is very active with chatrooms for different areas. There you can ask questions, ask for help, and get info about workshops.</li>
-    <li>Our <a href="http://fb.com/groups/makerspace.se/">Facebook group for members</a></li>
-    <li>In the <a href="https://www.makerspace.se/kalendarium">Calendar</a> you can see the upcoming events and "nyckelutlämningar".</li>
+    <li>In the <a href="https://www.makerspace.se/kalendarium">Calendar</a> you can see the upcoming events and new member introductions.</li>
     <li>We send out a newsletter ("Nyhetsbrev") to every members' email (sent sporadically).</li>
     <li><a href="https://www.makerspace.se/">The homepage</a> has links and other info about the association.</li>
     <li><a href="https://wiki.makerspace.se">The Wiki</a> has lots of information, including <a href="https://wiki.makerspace.se/Makerspace_FAQ,_English">Makerspace FAQ</a> (frequently asked questions and answers), and <a href="https://wiki.makerspace.se/Maskiner_och_inventarier">Maskiner och inventarier</a> (a list of the tools and equipment), as well as help for each machine (like what parameters you need for different materials in the laser cutter).</li>
