--- a/public/src/templates/register.html
+++ b/public/src/templates/register.html
@@ -58,7 +58,7 @@
 
             <h3>English</h3>
 
-            <p>The starter pack gives you one year of membership in the association and 60 days of lab membership at a discounted price. The lab access time starts after your key is retrieved during a "nyckelutlämning" (key handout) (take a look at the <a target="_blank" href="https://www.makerspace.se/kalendarium">calendar</a> for the next date).</p>
+            <p>The starter pack gives you one year of membership in the association and 60 days of lab membership at a discounted price. The lab access time starts after your key is retrieved during a "medlemsintroduktion" (new member introduction) (take a look at the <a target="_blank" href="https://www.makerspace.se/kalendarium">calendar</a> for the next date).</p>
 
             <p><strong>You must be at least 16 years old to purchase lab membership!</strong></p>
             <p><strong>We do not allow commercial use of the premises!</strong></p>
@@ -67,7 +67,7 @@
             <p><strong>Buying the annual membership only allows you to attend courses and the yearly meeting. You need to purchase lab membership to work in the space outside of courses.</strong></p>
             <h3>Svenska</h3>
 
-            <p>Startpaketet ger dig årsmedlemsskap i föreningen samt 60 dagars labaccess till ett paketpris. Labaccessen börjar räknas efter uthämtad nyckel på en nyckelutlämning (se <a target="_blank" href="https://www.makerspace.se/kalendarium">kalendariet</a> för nästa tillfälle).</p>
+            <p>Startpaketet ger dig årsmedlemsskap i föreningen samt 60 dagars labaccess till ett paketpris. Labaccessen börjar räknas efter uthämtad nyckel på en medlemsintroduktion (se <a target="_blank" href="https://www.makerspace.se/kalendarium">kalendariet</a> för nästa tillfälle).</p>
             <p><strong>Du måste vara minst 16 för att köpa labbmedlemskap!</strong></p>
             <p><strong>Vi tillåter inte kommersiellt bruk av lokalerna!</strong></p>
             <p>Du kan istället välja att köpa endast årsmedlemsskap i föreningen. Labaccess kan köpas separat i <a target="_blank" href="/shop">webshoppen</a>. Detta är något dyrare än paketpriset.</p>
