Show instructions how to become a lab member
Closes #285

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1044,6 +1044,10 @@ form input.readonly-input {
     background: #eca72f;
 }
 
+.member-text-warning {
+    color: #eca72f;
+}
+
 .member-key-tag {
     min-width: 100px;
 }
