--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,5 +1,9 @@
 @import 'include-media';
-$breakpoints: (phone: 320px, tablet: 800px, desktop: 1024px);
+$breakpoints: (
+    phone: 320px,
+    tablet: 800px,
+    desktop: 1024px
+);
 
 $primary-color: #333;
 
@@ -95,7 +99,7 @@ body {
         }
     }
 
-    li.active > a {
+    li.active>a {
         color: #444;
     }
 
@@ -765,14 +769,14 @@ form input.readonly-input {
 
         .receipt-item-count {
             grid-column: 2;
-            white-space:nowrap;
+            white-space: nowrap;
             text-align: right;
         }
 
         .receipt-item-amount {
             grid-column: 3;
             flex-shrink: 0;
-            white-space:nowrap;
+            white-space: nowrap;
             text-align: right;
         }
     }
@@ -810,6 +814,7 @@ form input.readonly-input {
     }
 
     color: white;
+
     #images {
         background: white;
 
@@ -1462,6 +1467,23 @@ $palette-red: $palette4;
 #root.register-page {
     padding-top: 32px;
     background: #ECECEC;
+    min-height: 100%;
+    box-sizing: border-box;
+    padding-bottom: 32px;
+
+    .content-wrapper {
+        max-width: 800px;
+        flex: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        align-self: stretch;
+    }
+
+    .StripeElement {
+        margin: 0px 16px;
+    }
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1471,6 +1493,7 @@ $palette-red: $palette4;
         font-size: 1.8em;
         text-align: center;
     }
+
     p {
         margin: 10px 32px;
         text-align: center;
@@ -1507,11 +1530,31 @@ $palette-red: $palette4;
             outline: 4px solid rgb(73, 73, 73, 0.1);
         }
 
+        .plan-highlight {
+            position: absolute;
+            right: 5px;
+            top: 0px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            font-size: 0.6em;
+            height: 100%;
+
+            span {
+                color: white;
+                background-color: #51B911;
+                border-radius: 100px;
+                padding: 5px 10px;
+            }
+        }
+
         .access-plan-title {
             font-weight: bold;
             font-size: 1.1em;
             margin-top: 10px;
             margin-bottom: 10px;
+            position: relative;
         }
 
         .access-plan-description {
@@ -1533,7 +1576,7 @@ $palette-red: $palette4;
                 line-height: 100%;
                 opacity: 0.5;
             }
-            
+
             .price {
                 font-weight: bold;
                 font-size: 3em;
@@ -1560,7 +1603,14 @@ $palette-red: $palette4;
         align-items: stretch;
         padding: 10px;
 
-        .small-price, .requirement {
+        .panel-divider {
+            border-bottom: 1px solid #B6B6B6;
+            margin-top: 10px;
+            margin-bottom: 16px;
+        }
+
+        .small-price,
+        .requirement {
             text-align: center;
         }
 
@@ -1599,5 +1649,209 @@ $palette-red: $palette4;
                 line-height: 100%;
             }
         }
+    }
+
+    .payment-processor {
+        margin-left: 21px;
+        margin-top: 10px;
+        font-size: 11px;
+        color: #777;
+        margin-bottom: 4px;
+    }
+
+    .flow-button-back {
+        font-size: 0.8em;
+        align-self: center;
+        color: #c6550d;
+    }
+
+    a.flow-button,
+    button.flow-button,
+    input[type="submit"].flow-button {
+        // Required for progress spinner
+        position: relative;
+
+        .uk-spinner {
+            position: absolute;
+            left: 16px;
+            top: 7px;
+        }
+
+        background: #e46d22;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        font-size: 20px;
+        border-bottom: 2px solid #B14908;
+        margin-left: 16px;
+        margin-right: 16px;
+        margin-top: 16px;
+        margin-bottom: 16px;
+        transition: 50ms background-color;
+        cursor: pointer;
+        text-decoration: none; // Remove underline from links
+        font-family: inherit; // Disable the browser's own font-family for buttons
+        line-height: normal; // Reset line-height to normal, as it otherwise differs between 'a' and 'button' tags
+        text-align: center;
+
+        &:hover,
+        &:active {
+            background-color: #d9651d;
+        }
+
+        &:disabled {
+            background-color: #a7a7a7;
+            border-bottom: 2px solid #828282;
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+
+        &.flow-button-small {
+            font-size: 0.9em;
+            margin: 0px;
+        }
+    }
+
+    .registration-task-list {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        gap: 20px;
+        margin: 10px 0px;
+        padding: 0px 20px;
+        list-style: none;
+
+        li {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 20px;
+        }
+
+        button {
+            max-width: 300px;
+        }
+    }
+
+    .registration-logo {
+        max-width: 200px;
+        aspect-ratio: 300/210;
+        margin: 0px 16px;
+        align-self: center;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        padding: 0px 16px;
+
+        input[type="submit"] {
+            align-self: center;
+        }
+
+        input {
+            border: none;
+            /* Remove default style */
+        }
+
+        &.validate input:invalid {
+            outline: 2px solid #e46d22;
+        }
+    }
+
+    input[type="text"],
+    input[type="email"],
+    input[type="numeric"],
+    input[type="tel"] {
+        border-radius: 5px;
+    }
+
+    .terms-and-conditions {
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+    }
+
+    .rule-checkbox {
+        display: flex;
+        flex-direction: row;
+        margin: 20px;
+        align-items: center;
+        gap: 25px;
+
+        input {
+            width: 30px;
+            height: 30px;
+            flex-shrink: 0;
+        }
+    }
+
+    .rules-list {
+        margin: 0px 20px;
+
+        li {
+            margin: 5px 0px;
+        }
+    }
+
+    .to-pay-preview {
+        margin-right: 16px;
+        margin-left: 16px;
+        color: #fff;
+        overflow: hidden;
+        border-radius: 4px;
+        margin-bottom: 6px;
+        margin-top: 6px;
+
+        .receipt-items {
+            background-color: #c87744;
+            font-size: 1.0em;
+
+            grid-template-columns: 5fr 1fr;
+
+            .receipt-item-amount {
+                grid-column: 2;
+            }
+        }
+
+        .receipt-amount {
+            background-color: #c25f22;
+            font-size: 1.2em;
+        }
+
+        box-shadow: 0px 0.1px 0.3px rgba(0, 0, 0, 0.02),
+        0px 0.3px 0.7px rgba(0, 0, 0, 0.028),
+        0px 0.5px 1.3px rgba(0, 0, 0, 0.035),
+        0px 0.9px 2.2px rgba(0, 0, 0, 0.042),
+        0px 1.7px 4.2px rgba(0, 0, 0, 0.05),
+        0px 4px 10px rgba(0, 0, 0, 0.07);
+
+
+    }
+
+    .small-print {
+        font-size: 0.8em;
+        display: block;
+        margin-left: 21px;
+        margin-right: 16px;
+    }
+}
+
+.task {
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 100%;
+    opacity: 30%;
+    transition: 100ms opacity, 100ms background-color;
+    background-color: rgba(135, 201, 43, 0);
+
+    &.task-done {
+        background-color: rgb(135, 201, 43);
+        color: white;
+        border: 1px solid transparent;
+        opacity: 100%;
     }
 }
