--- a/public/src/templates/payment_form.html
+++ b/public/src/templates/payment_form.html
@@ -13,7 +13,7 @@
             <div id="card-errors" role="alert"></div>
         </div>
 
-        <button type="button" id="pay-button" class="uk-button uk-button-default uk-button-primary" disabled>
+        <button type="button" id="pay-button" class="spinner-button uk-button uk-button-default uk-button-primary" disabled>
             <div class="progress-spinner" uk-spinner></div>
             <span>Betala / Pay<span id='cart-sum'></span></span>
         </button>
