--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -17,6 +17,22 @@ body {
     border-radius: 2px;
 }
 
+.uk-button-group {
+    .uk-button {
+        border-radius: 0px;
+
+        &:first-child {
+            border-top-left-radius: 2px;
+            border-bottom-left-radius: 2px;
+        }
+
+        &:last-child {
+            border-top-right-radius: 2px;
+            border-bottom-right-radius: 2px;
+        }
+    }
+}
+
 #root {
     // position: absolute;
     width: 100%;
