--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1613,7 +1613,8 @@ $palette-red: $palette4;
             color: white;
             padding: 20px;
 
-            .abovePrice, .belowPrice {
+            .abovePrice,
+            .belowPrice {
                 font-size: 0.9em;
                 font-weight: bold;
                 line-height: 100%;
@@ -1728,7 +1729,9 @@ $palette-red: $palette4;
         background: #fff;
         color: rgb(104, 104, 104);
         border-bottom: 2px solid #b6b6b6;
-        &:hover:not(:disabled), &:active:not(:disabled) {
+
+        &:hover:not(:disabled),
+        &:active:not(:disabled) {
             background-color: #e5e5e5;
             color: rgb(90, 90, 90);
         }
@@ -1738,7 +1741,8 @@ $palette-red: $palette4;
             border-bottom: 2px solid #B14908;
             color: white;
 
-            &:hover:not(:disabled), &:active:not(:disabled) {
+            &:hover:not(:disabled),
+            &:active:not(:disabled) {
                 background-color: #d9651d;
                 color: white;
             }
@@ -1855,66 +1859,6 @@ $palette-red: $palette4;
         }
     }
 
-    .to-pay-preview {
-        margin-right: 16px;
-        margin-left: 16px;
-        color: #fff;
-        overflow: hidden;
-        border-radius: 4px;
-        margin-bottom: 6px;
-        margin-top: 6px;
-
-        @media screen and (width > $break-medium) {
-            align-self: stretch;
-        }
-
-        .receipt-items {
-            background-color: #c87744;
-            font-size: 1.0em;
-
-            grid-template-columns: 5fr 1fr;
-
-            .receipt-item-amount {
-                grid-column: 2;
-            }
-
-            &.with-original-price-column {
-                grid-template-columns: 5fr 1fr 1fr;
-
-                .receipt-item-original-amount {
-                    grid-column: 2;
-                    text-align: right;
-                    white-space: nowrap;
-                }
-
-                .receipt-item-amount {
-                    grid-column: 3;
-                }
-            }
-        }
-
-        .receipt-amount {
-            background-color: #c25f22;
-            font-size: 1.2em;
-        }
-
-        box-shadow: 0px 0.1px 0.3px rgba(0, 0, 0, 0.02),
-        0px 0.3px 0.7px rgba(0, 0, 0, 0.028),
-        0px 0.5px 1.3px rgba(0, 0, 0, 0.035),
-        0px 0.9px 2.2px rgba(0, 0, 0, 0.042),
-        0px 1.7px 4.2px rgba(0, 0, 0, 0.05),
-        0px 4px 10px rgba(0, 0, 0, 0.07);
-
-
-    }
-
-    .small-print {
-        font-size: 0.9em;
-        display: block;
-        margin-left: 21px;
-        margin-right: 16px;
-    }
-
     textarea {
         margin: 0px 16px;
         border-radius: 5px;
@@ -1922,6 +1866,66 @@ $palette-red: $palette4;
         border: none;
         padding: 10px;
     }
+}
+
+.to-pay-preview {
+    margin-right: 16px;
+    margin-left: 16px;
+    color: #fff;
+    overflow: hidden;
+    border-radius: 4px;
+    margin-bottom: 6px;
+    margin-top: 6px;
+
+    @media screen and (width > $break-medium) {
+        align-self: stretch;
+    }
+
+    .receipt-items {
+        background-color: #c87744;
+        font-size: 1.0em;
+
+        grid-template-columns: 5fr 1fr;
+
+        .receipt-item-amount {
+            grid-column: 2;
+        }
+
+        &.with-original-price-column {
+            grid-template-columns: 5fr 1fr 1fr;
+
+            .receipt-item-original-amount {
+                grid-column: 2;
+                text-align: right;
+                white-space: nowrap;
+            }
+
+            .receipt-item-amount {
+                grid-column: 3;
+            }
+        }
+    }
+
+    .receipt-amount {
+        background-color: #c25f22;
+        font-size: 1.2em;
+    }
+
+    box-shadow: 0px 0.1px 0.3px rgba(0, 0, 0, 0.02),
+    0px 0.3px 0.7px rgba(0, 0, 0, 0.028),
+    0px 0.5px 1.3px rgba(0, 0, 0, 0.035),
+    0px 0.9px 2.2px rgba(0, 0, 0, 0.042),
+    0px 1.7px 4.2px rgba(0, 0, 0, 0.05),
+    0px 4px 10px rgba(0, 0, 0, 0.07);
+
+
+}
+
+.small-print {
+    font-size: 0.9em;
+    display: block;
+    margin-left: 21px;
+    margin-right: 16px;
 }
 
 .task {
@@ -1953,6 +1957,7 @@ $palette-red: $palette4;
     span.positive {
         color: rgb(135, 201, 43);
     }
+
     span.negative {
         color: rgb(201, 43, 43);
     }
