--- a/api/src/templates/new_low_income_member.body.html
+++ b/api/src/templates/new_low_income_member.body.html
@@ -1,5 +1,5 @@
 <h2>
-  #{{member.member_number}} {{member.firstname}} {{member.lastname}} has
+   <a href="https://admin.makerspace.se/membership/members/{{member.member_id}}">#{{member.member_number}} {{member.firstname}} {{member.lastname}}</a> has
   registered as a low income member.
 </h2>
 
