--- a/public/src/templates/meta.html
+++ b/public/src/templates/meta.html
@@ -4,4 +4,4 @@
     window.apiBasePath = "{{ meta.api_base_url }}";
     window.staticBasePath = "{{ STATIC }}";
 </script>
-<script defer data-domain="medlem.makerspace.se" src="https://plausible.makerspace.se/js/script.tagged-events.js"></script>
+<script defer data-domain="{{ meta.host_public }}" src="https://plausible.makerspace.se/js/script.tagged-events.js"></script>
