--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -93,6 +93,7 @@ body {
             position: fixed;
             top: 0px;
             bottom: 0px;
+            overflow-y: auto;
         }
     }
 
