Fix incorrect closing tags

--- a/public/src/templates/product.html
+++ b/public/src/templates/product.html
@@ -26,7 +26,7 @@
                 <div class="centered-product-count">
                     <div>
                         <button type="button" class="number-subtract" data-amount="1" uk-icon="minus"></button>
-                        <input id="smallest-multiple" type="number" min=0 max=9999 placeholder="0" class="product-amount"></input>
+                        <input id="smallest-multiple" type="number" min=0 max=9999 placeholder="0" class="product-amount"/>
                         <span id="unit" class="product-unit"></span>
                         <button type="button" class="number-add" data-amount="1"  uk-icon="plus"></button>
                     </div>
