--- a/api/src/templates/updated_member_info.body.html
+++ b/api/src/templates/updated_member_info.body.html
@@ -4,8 +4,7 @@
 <p>Hej {{ member.firstname }},</p>
 <p>(See below for English).</p>
 <p>
-    Dina personliga uppgifter har uppdaterats. Om detta inte var korrekt bör du se över dina uppgifter genom att logga
-    in på din <a href="{{ public_url('/member') }}">Stockholm Makerspace medlemssida</a>.
+    Dina personliga uppgifter har uppdaterats. Om detta inte var korrekt bör du kontakta styrelsen på info@makerspace.se.
 </p>
 
 {% if message_swe %}
@@ -17,8 +16,7 @@
 
 {% block english %}
 <p>
-    Your personal information has been updated. If this was incorrect you should have a look at your personal
-    information by logging in to your <a href="{{ public_url('/member') }}">Stockholm Makerspace medlemssida</a>.
+    Your personal information has been updated. If this was incorrect you should inform the board on info@makerspace.se.
 </p>
 
 {% if message_en %}
