--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -11,7 +11,7 @@
 {% block language clarification %}
 <div class="text-box">
     <h3 > About language</h3>
-    <p>The primary language on Stockholm Makerspace is Swedish, but you are very welcome to use English as well. Newsletters and important announcements as well as our courses are as a rule available in English. If you need help to translate something from Swedish to English, don’t hesitate to ask other members or post about it on Slack.</p>
+    <p>The primary language on Stockholm Makerspace is Swedish, but you are very welcome to use English as well. Newsletters and important announcements as well as our courses are as a rule available in English. If you need help to translate something from Swedish to English, don’t hesitate to ask other members or post about it on Slack. An English version of this email is available further down.</p>
 </div>
 <hr>
 {% enbblock %}
