--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -20,7 +20,7 @@
 <h2>SVENSKA</h2>
 <p>Hejsan! Välkommen till Stockholm Makerspace! &#128515;<br> Vi hoppas du uppskattade introkursen och är redo att påbörja din kreativa resa med oss.</p>
 
-<p>Som ny medlem har du förmodligen en del frågor. I detta mail kommer du få en sammanfattning av vad du fick höra på introkursen och länkar till några onlineresurser som hjälper dig att sätta igång.</p>
+<p>Som ny medlem har du förmodligen en del frågor. I detta mail kommer du få en sammanfattning av vad du fick höra på introkursen och länkar till några onlineresurser som hjälper dig att komma igång.</p>
 
 <h3>Dina medlemsuppgifter:</h3>
 <p>Namn: {{member.firstname}} {{member.lastname}}<br/>
