--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -38,7 +38,7 @@
 <h3>Kom igång:</h3>
 <p>Först och främst, se till att du har allt du behöver för att komma igång:</p>
 <ul>
-    <li>Se till att du har laddat ner appen Accessy. Om du inte redan gjort detta så hittar du den information du behöver på <a href="https://wiki.makerspace.se/Accessy">Accessys wikisida</a>.</li>
+    <li>Se till att du har laddat ner appen Accessy. Om du inte redan gjort detta så hittar du den information du behöver på <a href="https://wiki.makerspace.se/Accessy">vår wikisida om Accessy</a>.</li>
     <li>Se till att ladda ner och ordna ett konto på appen Slack (från <a herf="https://play.google.com/store/apps/details?id=com.Slack&hl=en_US&pli=1">Google Play</a> eller <a href="https://apps.apple.com/se/app/slack/id618783545">Apple Store</a>), eftersom det är det huvudsakliga sättet att kommunicera med andra på makerspacet. Om du behöver mer information, läs <a href="https://wiki.makerspace.se/Slack">Slacks wikisida</a></li>
     <li>Here are links to other important online resources</li>
     <ul>
